--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -18,11 +18,9 @@
 
   <style>
     html {
-      background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=5);
+      background: #018DED url(https://source.unsplash.com/random/400x200);
       background-size: cover;
-      font-family: 'helvetica neue';
       text-align: center;
-      font-size: 10px;
     }
 
     body {
@@ -71,7 +69,6 @@
   </style>
 
   <script>
-    
     const secondHand = document.querySelector('.second-hand');
     const minHand = document.querySelector('.min-hand');
     const hourHand = document.querySelector('.hour-hand')
