--- a/24 - Sticky Nav/index-START.html
+++ b/24 - Sticky Nav/index-START.html
@@ -16,7 +16,7 @@
       <li class="logo"><a href="#">LOST.</a></li>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">Images</a></li>
+      <li><a href="#">Images</a></li >
       <li><a href="#">Locations</a></li>
       <li><a href="#">Maps</a></li>
     </ul>
@@ -54,6 +54,20 @@
   </div>
 
 <script>
+  const nav = document.querySelector('#main')
+  const topOfNav = nav.offsetTop
+
+  function fixNav(){
+    if(window.scrollY >= topOfNav){
+      document.body.style.paddingTop = nav.offsetHeight + 'px'
+      document.body.classList.add('fixed-nav')
+    }else{
+      document.body.style.paddingTop = 0
+      document.body.classList.remove('fixed-nav')
+    }
+  }
+  
+  window.addEventListener('scroll',fixNav)
 
 </script>
 
