--- a/30 - Whack A Mole/index-FINISHED.html
+++ b/30 - Whack A Mole/index-FINISHED.html
@@ -9,8 +9,11 @@
 <body>
 
   <h1>Whack-a-mole! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
+  
 
+  <div class="button">
+    <button onClick="startGame()">Start!</button>
+  </div>
   <div class="game">
     <div class="hole hole1">
       <div class="mole"></div>
@@ -56,7 +59,7 @@
   }
 
   function peep() {
-    const time = randomTime(200, 1000);
+    const time = randomTime(150, 800);
     const hole = randomHole(holes);
     hole.classList.add('up');
     setTimeout(() => {
